# images

./: .busted  .clang-format  .clang-tidy  .codeclimate.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luacheckrc  .luacov  .travis.yml  CHANGELOG.md  CMakeLists.txt  DOCKER.md  Dockerfile  INSTALL.md  LICENSE  LICENSE.md  Makefile  Privacy-Policy.md  README.md  bootstrap.min.js  composer.json  config  config.example.php  config.make  docker-compose.yml  html5shiv-printshiv.min.js  images.css  index.php  install-vips.sh  phpcs-ruleset.xml  phpmd.xml  phpunit.xml  phpunit.xml.dist
.ci/: busted  install-luarocks.sh  install-vips.sh  run_tests.sh
.github/workflows/: ci.yml
.travis/: install-luarocks.sh  install-vips.sh
app/: config.example.lua  crt.lua  main.lua
app/static/: colors.html
app/static/crt/: clear_global_cache.txt  (+1 more)
app/views/: cache-removal.html  index.html
cloudflare/: clientApi.php
config/: imagesweserv.nginxconf  nginx.conf  php-fpm.conf  php.ini  supervisord.conf  www.conf
config/nginx/: nginx.conf
config/php/: php-fpm.conf  phpinfo
docker/: Dockerfile  README.md  alpine.Dockerfile
include/api/: api_manager.h  env_interface.h
include/weserv/: api_manager.h  config.h  enums.h  env_interface.h
nginx/: images.nginx.conf  images.nginxconf  nginx.conf
ngx_conf/: README.md  imagesweserv-no-cache.conf  imagesweserv-secure-link.conf  imagesweserv.conf  nginx.conf
php-fpm/: php-fpm.conf  php.ini  phpinfo
public/: README.md  colors.html  index.php
public/css/: images-v2.css  images-v3.css  images-v3.css.map
public/css-compiled/: nucleus.css  theme.css
public/js/: bootstrap.min.js  imagesweserv.js
public/scss/: images-v3.scss
regdomain/: gDNS.php
spec/: api_spec.lua  client_spec.lua  fixtures.lua  helpers.lua  policy_spec.lua  server_spec.lua  throttler_spec.lua
spec/helpers/: color_spec.lua  punycode_spec.lua  response_spec.lua  utils_spec.lua
spec/manipulators/: background_spec.lua  blur_spec.lua  brightness_spec.lua  contrast_spec.lua  crop_spec.lua  filter_spec.lua  gamma_spec.lua  letterbox_spec.lua  mask_spec.lua  orientation_spec.lua  sharpen_spec.lua  thumbnail_spec.lua  trim_spec.lua
src/: Client.php  Server.php  weserv.lua
src/Api/: Api.php  ApiInterface.php
src/Exception/: ImageNotReadableException.php  ImageNotValidException.php  ImageProcessingException.php  ImageTooBigException.php  ImageTooLargeException.php  RateExceededException.php
src/Manipulators/: Background.php  BaseManipulator.php  Blur.php  Border.php  Brightness.php  Contrast.php  Crop.php  Encode.php  Filter.php  Gamma.php  Letterbox.php  ManipulatorInterface.php  Orientation.php  Pixelate.php  Shape.php  Sharpen.php  Size.php  Thumbnail.php  Trim.php
src/Throttler/: MemcachedThrottler.php  RedisThrottler.php  ThrottlerInterface.php  ThrottlingPolicy.php
src/api/: CMakeLists.txt  api_manager_impl.cpp  api_manager_impl.h  enums.h  weserv.pc.in
src/api/exceptions/: invalid.h  large.h  unreadable.h  unsupported.h
src/api/io/: source.cpp  source.h  target.cpp  target.h
src/api/parsers/: base.h  color.cpp  color.h  coordinate.cpp  coordinate.h  enumeration.h  numeric.h  query.cpp  query.h  query_holder.h
src/api/processors/: alignment.cpp  alignment.h  background.cpp  background.h  base.h  blur.cpp  blur.h  brightness.cpp  brightness.h  buffer.cpp  buffer.h  contrast.cpp  contrast.h  crop.cpp  crop.h  embed.cpp  embed.h  filter.cpp  filter.h  gamma.cpp  gamma.h  mask.cpp  mask.h  modulate.cpp  modulate.h  orientation.cpp  orientation.h  rotation.cpp  rotation.h  saturate.cpp  saturate.h  sharpen.cpp  sharpen.h  stream.cpp  stream.h  thumbnail.cpp  thumbnail.h  tint.cpp  tint.h  trim.cpp  (+1 more)
src/api/utils/: status.cpp  utility.h
src/nginx/: alloc.h  api.cpp  api.h  environment.cpp  environment.h  error.cpp  error.h  handler.cpp  handler.h  header.cpp  header.h  http.cpp  http.h  http_filter.cpp  http_filter.h  http_request.h  module.cpp  module.h  stream.cpp  stream.h  uri_parser.cpp  uri_parser.h  util.cpp  util.h
src/tools/: CMakeLists.txt  cli.cpp  cli_environment.h
src/weserv/: api.lua  client.lua  policy.lua  server.lua  throttler.lua
t/: 01-basic.t
test/: README.md  valgrind.suppress
test/api/: CMakeLists.txt  base.cpp  base.h  fixtures.h  max_color_distance.cpp  max_color_distance.h  similar_image.cpp  similar_image.h  test_environment.h
test/api/exceptions/: unit-invalid.cpp  unit-large.cpp  unit-timeout.cpp  unit-unreadable.cpp  unit-unsupported.cpp
test/api/fixtures/: 84y2.hdr  PalaisDuLouvre.tif
test/api/fixtures/expected/: extract.tiff  tiff-pyramid.tiff
test/api/parsers/: unit-color.cpp  unit-query.cpp
test/api/processors/: unit-alignment.cpp  unit-background.cpp  unit-blur.cpp  unit-brightness.cpp  unit-buffer.cpp  unit-contrast.cpp  unit-crop.cpp  unit-embed.cpp  unit-filter.cpp  unit-gamma.cpp  unit-mask.cpp  unit-modulate.cpp  unit-orientation.cpp  unit-rotation.cpp  unit-saturate.cpp  unit-sharpen.cpp  unit-stream.cpp  unit-thumbnail.cpp  unit-tint.cpp  unit-trim.cpp
test/api/utils/: unit-status.cpp
test/nginx/: error.t  file.t  header.t  proxy.t  timeout.t  uri.t
tests/: ClientTest.php  FixturesTrait.php  ImagesWeservTestCase.php  ImagesweservTestCase.php  MaxColorDistanceConstraint.php  ServerTest.php  SimilarImageConstraint.php
tests/Api/: ApiTest.php
tests/Exception/: ImageNotReadableExceptionTest.php  ImageNotValidExceptionTest.php  ImageTooBigExceptionTest.php  ImageTooLargeExceptionTest.php  RateExceededExceptionTest.php
tests/Manipulators/: BackgroundTest.php  BlurTest.php  BrightnessTest.php  ContrastTest.php  CropTest.php  FilterTest.php  GammaTest.php  LetterboxTest.php  OrientationTest.php  ShapeTest.php  SharpenTest.php  SizeTest.php  ThumbnailTest.php  TrimTest.php
tests/Throttler/: MemcachedThrottlerTest.php  RedisThrottlerTest.php  ThrottlingPolicyTest.php
trunk/: index.php  nginx.conf  php-fpm.conf
trunk/nginx/: images.nginx.conf  nginx.conf
trunk/php-fpm/: php-fpm.conf
trunk/regdomain/: effectiveTLDs.inc.php  regDomain.inc.php
(+50 files in other folders)
